galen: initial version of map toggle, issues with hidden map not showing up quite right

--- a/project 3 fiddling-galen/static/css/style.css
+++ b/project 3 fiddling-galen/static/css/style.css
@@ -1,7 +1,28 @@
 html,
 body,
-#map-id {
+.map-m {
   height: 100%;
-  padding: 0;
-  margin: 0;
+  max-width: 100%;
+  padding: 5;
+  margin: 5;
+}
+
+.map-f {
+  height: 100%;
+  max-width: 100%;
+  padding: 5;
+  margin: 5;
+  display: none;
+}
+
+#test {
+  display:block;
+}
+
+#map-id-m {
+  display: block;
+}
+
+#map-id-f {
+  display:none;
 }
